syntax = "proto3";

option csharp_namespace = "PizzaOrdering.Protos";

service Ordering {
	rpc PizzaIsDone (PizzaIsDoneRequest) returns (PizzaIsDoneResponse);
}

message PizzaIsDoneRequest {
	int32 order_id = 1;
}

message PizzaIsDoneResponse {
	
}